--- a/TodoApplication/TodoApplication/Views/Default/Index.cshtml
+++ b/TodoApplication/TodoApplication/Views/Default/Index.cshtml
@@ -27,7 +27,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react-transition-group/2.4.0/react-transition-group.js" type="text/javascript"></script>
     <script type="text/javascript">
         var today = new Date();
-        var todayString = (today.getDay() > 9 ? today.getDay() : '0' + today.getDay()) + '/' + (today.getMonth() + 1) + '/' + today.getFullYear();
+        var todayString = ((today.getDate() > 9 ? today.getDate() : '0' + today.getDate())) + '/' + (today.getMonth() + 1) + '/' + today.getFullYear();
     </script>
 
     <script src="@Url.Content("~/Scripts/React/Components/AppContainer.jsx")"></script>
